dropdown overlap issue

--- a/SPARK-App/src/pages/flashcardList/FlashcardList.css
+++ b/SPARK-App/src/pages/flashcardList/FlashcardList.css
@@ -18,4 +18,5 @@
 
 .dropdown {
     margin-right: 20px;
+    z-index: 10000;
 }
